project(g2dg_test)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
include_directories(..)
if (WIN32)
  include_directories ("D:\\tools\\boost_1_70_0")
endif (WIN32)
#add_executable(${PROJECT_NAME} ${SRC_LIST})
add_executable(concept_test grid2d_graph_cc.cpp)
add_executable(dijkstra_test dijkstra_test.cpp)

if (NOT WIN32)
  set(CMAKE_CXX_FLAGS "-g -std=gnu++11")
endif (NOT WIN32)
